# DarkGalgame-old

./: .gitignore  CMakeLists.txt  debug.sh
application/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
application/app/src/androidTest/java/org/fallenworld/darkgalgame/: ExampleInstrumentedTest.java
application/app/src/main/: AndroidManifest.xml
application/app/src/main/cpp/: native-lib.cpp
application/app/src/main/java/org/fallenworld/darkgalgame/: MainActivity.java
application/app/src/main/res/layout/: activity_main.xml
application/app/src/main/res/values/: strings.xml
application/app/src/test/java/org/fallenworld/darkgalgame/: ExampleUnitTest.java
application/gradle/wrapper/: gradle-wrapper.properties
bridge/: androidConfig.h  debug.c  debug.h  start.c  start.h
debugSysRoot/data/data/org.fallenworld.darkgalgame/: wine  wineserver
qemu-2.8.0/: Makefile.target
qemu-2.8.0/android/: android.h
wine-2.8/libs/wine/: loader.c
wine-2.8/loader/: Makefile.in
